redis-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\bins\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-service
  name: redis-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\bins\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/game-network: "true"
        io.kompose.service: redis-service
    spec:
      containers:
        - image: redis
          name: redis-service
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
status: {}
