runner-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\bins\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: runner-service
  name: runner-service
spec:
  ports:
    - name: "8088"
      port: 8088
      targetPort: 8080
  selector:
    io.kompose.service: runner-service
status:
  loadBalancer: {}
